2001-11-15  Mark McLoughlin  <mark@skynet.ie>

	* panel-applet.c: 
	(panel_applet_setup_menu), only set the popups path, not the
	button3 path - seems we can't insert a list of xml nodes.
	(panel_applet_factory_main): impl.

	* panel-applet.h: nice bonobo factory api.

	* test-bonobo-applet.c: upd.

2001-11-15  Mark McLoughlin  <mark@skynet.ie>

	* panel-applet.[ch]: (panel_applet_setup_menu),
	(panel_applet_setup_menu_from_file): impl convience functions.

	* test-bonobo-applet.c: (test_applet_new): use.

2001-11-15  Mark McLoughlin  <mark@skynet.ie>

	* panel-applet.c, panel-applet.h: start of bonobo applet API.

	* panel-applet-frame.c: add popup menus.

	* test-bonobo-applet.c: ditto.

	* Makefile.am: upd.

2001-11-15  Mark McLoughlin  <mark@skynet.ie>

	* basep-widget.c, drawer-widget.c, drawer.c: switch 
	debugging off.

	* launcher.c: (ask_about_launcher): change order of buttons as
	per usability propaganda :-)

2001-11-15  Glynn Foster  <glynn.foster@sun.com>

	* menu.c: Fix up compilation by commenting out the
	lock accelerator stuff

2001-11-14  Glynn Foster  <glynn.foster@sun.com>

	* aligned-widget.c, aligned-widget.h, basep-widget.c,
	* border-widget.c, border-widget.h, drawer-widget.c,
	* drawer.c, edge-widget.c, edge-widget.h,
	* foobar-widget.c, menu.c, panel-gconf.c, panel.c,
	* panel_config.c, panelglobalconfig.schema, session.c,
	* sliding-widget.c, sliding-widget.h:

	Fix gconf leaks - thanks to andersca
	Change the schema to cover over a problem with autohide
	panels [still needs to be fixed].
	More GObject porting and header standardization.

2001-11-12  Frank Belew  <frb@ximian.com>

	* Makefile.am: comment out SUBDIRS to fix dist targets

2001-11-12  Glynn Foster  <glynn.foster@sun.com>

	* launcher.c, main.c, session.c:, session.h: Fix up 
	  launcher loads a little so that the launchers load up
	  on the panel.

2001-11-09  Mark McLoughlin  <mark@skynet.ie>

	* session.c, session.h: move dead launchers stuff in here.
