@@ -1,5 +1,10 @@
 2001-11-15  Mark McLoughlin  <mark@skynet.ie>
 
+	* panel-applet.[ch]: update to use GType stuff 
+	instead of GtkType.
+
+2001-11-15  Mark McLoughlin  <mark@skynet.ie>
+
 	* panel-applet.c: 
 	(panel_applet_setup_menu), only set the popups path, not the
 	button3 path - seems we can't insert a list of xml nodes.
